--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,11 @@
 [project]
 name = "updall"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.2.0"
+description = "A simple update manager"
 readme = "README.md"
-authors = [
-    { name = "Bruno Carnazzi", email = "bcarnazzi@gmail.com" }
-]
+authors = [{ name = "Bruno Carnazzi", email = "bcarnazzi@gmail.com" }]
 requires-python = ">=3.13"
-dependencies = [
-    "rich>=14.1.0",
-    "sh>=2.2.2",
-]
+dependencies = ["rich>=14.1.0", "sh>=2.2.2"]
 
 [project.scripts]
 updall = "updall:main"
